Try and stop party vote summary wrapping if there's space
Again, this makes the table more structured and easier to read

--- a/app/assets/stylesheets/divisions/_division-votes-table.scss
+++ b/app/assets/stylesheets/divisions/_division-votes-table.scss
@@ -29,6 +29,10 @@
 
   .column-vote {
     width: 10em;
+
+    @media (min-width: $screen-sm-min) {
+      width: 13em;
+    }
   }
 
   tbody {
